completed the header part

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+body{
+  font-family: poppins;
 }
 
 @layer utilities {
@@ -14,12 +18,12 @@
   }
 }
 
-:root{
+/* :root{
   --primary-color: #6300B3;
   --secondary-color: #6200b37a;
   --pink-800: #c49ce0;
   --pink-200: hsla(275, 30%, 92%, 0.836); 
   
 }
-
+ */
 
