--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
 }
 
 body{
-  font-family: poppins;
+  font-family: 'poppins', sans-serif;
 }
 
 @layer utilities {
